--- a/portfolio.html
+++ b/portfolio.html
@@ -2,16 +2,20 @@
 <html>
     <head>
         <title>
-            Personal Portfolio
+            personal portfolio
         </title>
-        <body>
-            <h1 style="text-align: center; background-color: rgb(123, 176, 255); color: azure;">Allannah Becton</h1>
-            <h3 style="color: darkblue; background-color: rgba(226, 226, 226, 0.5);">
-                Name of College: NJIT <br> UCID: acb56 <br> Degree Program: Architecture
-            </h3>
-            <p style="color: blue;">Allannah is currently attending NJIT for her bachelor's in the 5 year Architecture program. <br> Before moving to New Jersey, she was attending high school in Ansbach, Germany on a military base.<br> Allannah is ecstatic about being able to experience a new situation that she knows she will learn from. <br> She is excited to express her feelings and ideas either on paper or digitally.</p>
-        <a href="https://www.njit.edu/academics/major/architecture"> NJIT Architecture Website</a> <br>
-        <img src="https://thumbs.dreamstime.com/b/architecture-plan-tools-12802962.jpg" alt="Architecture architecture-plan-tools-12802962" style="width: 550px;height: 400px;">
-        </body>
     </head>
+    <body>
+        <h1 style="color: lightpink;background-color: royalblue;"> Amira Caballero </h1>
+        <h3 style="color: lime; background-color: orange;"> NJIT, afc49, Architecture </h3>
+        <p style="color: mediumpurple; background-color: powderblue;">
+            I'm 18 years old and I have two silbings. <br>
+            I have a twin sister and an older brother. I was born in Ecuador but moved to the United States when I was 3 years old. <br>
+            I like to play sports for fun. <br>
+            Such as volleyball, tennis, swim and bike ride. I also like to draw and sketch. 
+        </p>
+        <a href="https://www.njit.edu/"> NJIT </a>
+        <img src="https://th.bing.com/th/id/OIP.IATEvUvTCgQknP8gm4Dg1wHaE6?w=276&h=183&c=7&r=0&o=5&dpr=1.3&pid=1.7">
+    </body>
 </html>
+    
