--- a/michelle_caceres_personalporfolio.html
+++ b/michelle_caceres_personalporfolio.html
@@ -16,5 +16,60 @@
         </p>
         <a href="https://www.njit.edu/"> NJIT </a>
         <img src="EX 2.jpg" alt="My second architecture project">
+          <div>
+            <style>
+            Table, th, td {
+                border: 1px solid black;
+            } 
+            </style>
+            <Table> 
+              <tr>
+                <th><h1>Education</h1></th><br>
+                <th><h1> Experience</h1></th>
+                <th><h1>Skills</h1></th><br>
+              </tr>
+              <tr>
+                <td>Hilled Colloge of Architecture and Design at NJIT</td>
+                <td>No experience yet</td>
+                <td>Creative<br> Critcal thinking<br> Collavorative <br> Quick Learner</td>
+              </tr>
+            </Table>
+            <br>
+        </div>
+        <div>
+            <form>
+                <label for="Username"> Username</label> <br>
+                <input type="text" id="Username" name="Username"><br>
+                <label for="First Name"> First Name</label> <br>
+                <input type="text" id="First Name" name="Fist Name"><br>
+                <label for="Last Name"> Last Name </label> <br>
+                <input type="text" id="Last Name" name="Last Name"><br>
+                <label for="Email"> Email </label> <br>
+                <input type="email" id="email"> <br>
+                <input type="checkbox" id="Mathematics" name="mathematics" value="Mathematics">
+                <label for="mathematics"> Math </label><br>
+                <input type="checkbox" id="Architecture">
+                <label for="Architecture"> Architecture </label><br>
+                <input type="checkbox" id="Compute Science" name="Compute Science">
+                <label for="Computer Science"> Compute Science </label> <br>
+                <input type="radio" id="Math"> 
+                <label for="Math"> Math </label><br>
+                <input type="radio" id="Architecture">
+                <label for="Architecture"> Architecture </label> <br>
+                <input type="radio" id="Computer Science">
+                <label for="Compute Science"> Computer Science </label> <br>
+                <input type="submit" value="submit">
+            </form>
+        </div>
+        <div>
+            <ul>
+                <li>Tools and Techniques</li><br>
+                <li>Pre-Calculus</li><br>
+                <li>Studio 1</li><br>
+                <li>English 101</li><br>
+                <li>Computer Programming</li><br>
+                <li>First Year Seminar</li>
+            </ul>
+        </div>
     </body>
 </html>
