--- a/michelle_caceres_personalporfolio.html
+++ b/michelle_caceres_personalporfolio.html
@@ -4,6 +4,7 @@
         <title style="color: blueviolet;">
             Personal Portfolio
         </title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body> 
         <h1 style="color: rgb(172, 116, 224); background-color: bisque;"> Michelle Caceres</h1>
@@ -16,12 +17,7 @@
         </p>
         <a href="https://www.njit.edu/"> NJIT </a>
         <img src="EX 2.jpg" alt="My second architecture project">
-          <div>
-            <style>
-            Table, th, td {
-                border: 1px solid black;
-            } 
-            </style>
+        <div>
             <Table> 
               <tr>
                 <th><h1>Education</h1></th><br>
@@ -70,6 +66,11 @@
                 <li>Computer Programming</li><br>
                 <li>First Year Seminar</li>
             </ul>
+        </div>
+        <div>
+            <img src="pochacco.png" alt="img1" class="img1">
+            <img src="bunny.png"  alt="img2" class="img2">
+            <img src="sanrio.png" alt="img3" class="img3">
         </div>
     </body>
 </html>
