--- a/Abigail Lab 3.html
+++ b/Abigail Lab 3.html
@@ -17,9 +17,7 @@
        <table class="sample" style="width:25%">
         <style>
           table, th, td {
-            border:2px solid black;
-            <th background-color: lightgray;
-          }
+            border:2px solid black;          }
           </style>          
         <tr>
           <th style="background-color: lightgrey;">Education</th>
