--- a/portfolio.html
+++ b/portfolio.html
@@ -6,16 +6,94 @@
         </title>
     </head>
     <body>
-        <h1 style="color: lightpink;background-color: royalblue;"> Amira Caballero </h1>
-        <h3 style="color: lime; background-color: orange;"> NJIT, afc49, Architecture </h3>
-        <p style="color: mediumpurple; background-color: powderblue;">
-            I'm 18 years old and I have two silbings. <br>
-            I have a twin sister and an older brother. I was born in Ecuador but moved to the United States when I was 3 years old. <br>
-            I like to play sports for fun. <br>
-            Such as volleyball, tennis, swim and bike ride. I also like to draw and sketch. 
-        </p>
-        <a href="https://www.njit.edu/"> NJIT </a>
-        <img src="https://th.bing.com/th/id/OIP.IATEvUvTCgQknP8gm4Dg1wHaE6?w=276&h=183&c=7&r=0&o=5&dpr=1.3&pid=1.7">
+        <h1 style="color: rgba(245, 0, 0, 0.922); background-color: rgb(0, 0, 0);">
+            Bella Camardo
+        </h1>
+        <h3 style="color: rgba(0, 0, 0, 0.922); background-color: rgba(255, 0, 0, 0.922);">
+            NJIT UCID:31627229 Bachelor of Architecture
+        </h3>
+        <p style="color: rgb(109, 100, 85);">
+            I am Bella Camardo, i am first-year architecture student at NJIT. I took an architecture class in High School and loved it. I also really love drawing, painting,  cars!!
+        <a href="https://www.njit.edu/">NJIT</a>
+        <img src="Lil Uzi.jpg" alt="lil uzi">
     </body>
+
+
+    <div>
+        <table style="width:50%">
+            <tr>
+                    <th>Education</th>
+                <th>Experience</th>
+                <th>Skills</th>
+            </tr>
+            <tr>
+                <td>First year bachelor of Architecture</td>
+                <td>revit</td>
+                <td>Designing onli</td>
+            </tr>
+        </table>
+    </div>
+
+
+
+
+    <div>
+        <form>
+            <label for="Username">Username</label>
+            <input type="text" placeholder="Username"> <br>
+            <label for="First Name">First Name</label>
+            <input type="First Name" placeholder="First Name"> <br>
+            <label for="Last Name">Last Name</label>
+            <input type="Last Name" placeholder="Last Name"> <br>
+            <label for="Email">Email</label>
+            <input type="Email" placeholder="Email"> <br>
+
+
+
+
+            <input type="checkbox" name="course"> Math
+            <input type="checkbox" name="course"> Architecture
+            <input type="checkbox" name="course"> Computer Science <br>
+
+
+
+
+            <input type="radio" name="course">Math
+            <input type="radio" name="course">Architecture
+            <input type="radio" name="course">Computer Science <br>
+
+
+
+
+            <input type="submit">
+        </form>
+    </div>
+
+
+
+
+    <div>  
+        <li><a href="#">ARCH 110 TOOLS AND TECHNIQUES I: INTRODUCTION TO ARCHITECTURE THINKING</a></li>
+        <li><a href="#">ARCH 195 ARCHITECTURE STUDIO I</a></li>
+        <li><a href="#">CS 104 COMPUTER PROGRAMMING AND GRAPHIC PROBLEMS</a></li>
+        <li><a href="#">FYS SEM FIRST-YEAR STUDENT SEMINAR</a></li>
+        <li><a href="#">MATH 107 UNIVERSITY MATHEMATICS A</a></li>
+    </div>      
+   
+    <link rel="stylesheet" href="style.css">
+
+
+    <div align="center">
+        <image class= "img1"
+        src="frog.jpeg"
+        alt="frog" height="150px" width="150px">
+        <image class= "img2"
+        src="granny.jpeg"
+        alt="granny" height="150px" width="150px">
+        <image class= "img3"
+        src="Man In Box.webp"
+        alt="man in Box" height="150px" width="150px">
+    </div>
+
+
 </html>
-    
