--- a/Allannah Becton_portfolio.html
+++ b/Allannah Becton_portfolio.html
@@ -5,6 +5,8 @@
             Personal Portfolio
         </title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <body>
             <h1 style="text-align: center; background-color: rgb(123, 176, 255); color: azure;">Allannah Becton</h1>
             <h3 style="color: darkblue; background-color: rgba(226, 226, 226, 0.5);">
@@ -15,7 +17,7 @@
         <img src="https://thumbs.dreamstime.com/b/architecture-plan-tools-12802962.jpg" alt="Architecture architecture-plan-tools-12802962" style="width: 550px;height: 400px;">
         </body>
         <div>
-            <table class="sample" style="width: 25%;">
+            <table class="table table-bordered table-striped" style="width: 25%;">
                 <tr>
                     <th class="cells">Name</th>
                     <th class="cells">Program</th>
@@ -88,4 +90,21 @@
             <li><a class="BA_link"href="https://design.njit.edu/bachelor-architecture">Bachelor of Architecture</a></li>
         </ul>
     </div>
+    <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+          Dropdown Menu
+        </button>
+        <ul class="dropdown-menu">
+             <li><a class="dropdown-item" href="#">Link 1</a></li>
+             <li><a class="dropdown-item" href="#">Link 2</a></li>
+             <li><a class="dropdown-item" href="#">Link 3</a></li>
+        </ul>
+    </div>
+    <br>
+    <div>
+        <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
+     <div id="demo" class="collapse">
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+     </div> 
+   </div>
 </html>
