--- a/Abbyindex3.html
+++ b/Abbyindex3.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <link rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <head> 
     <title>
       Personal Portfolio
@@ -22,11 +25,14 @@
             border:2px solid black;
           }
           </style>          
+    <table class="table table-bordered table-striped">
+      <thead>
         <tr>
           <th style="background-color: lightgrey;">Education</th>
           <th style="background-color: lightgrey;">Experience</th>
           <th style="background-color: lightgrey;">Skills</th>
         </tr>
+      </thead>
         <tr>
           <td>Hunterdon Central 2023</td>
           <td>Worked at Prestige Millwork</td>
@@ -94,7 +100,22 @@
       <li><a class="HCAD_link" href = "https://www.njit.edu/advising/hillier-college-architecture-and-design-hcad">HCAD</a></li>
       <li><a class="BA_link" href="https://www.njit.edu/academics/major/architecture">Majors</a></li>
     </ul>
-
+  <div class="dropdown">
+    <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+      Dropdown 
+    </button>
+    <ul class="dropdown-menu">
+      <li><a class="dropdown-item" href="#">Link 1</a></li>
+      <li><a class="dropdown-item" href="#">Link 2</a></li>
+      <li><a class="dropdown-item" href="#">Link 3</a></li>
+ </ul>
+  </div>
+  <div> 
+    <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
+    <div id="demo" class="collapse">
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+    </div>
+  </div>
 
 </body>
 </html>
