--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,10 @@
         <title>
             personal portfolio
         </title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </head>
     <body>
         <h1 style="color: rgba(245, 0, 0, 0.922); background-color: rgb(0, 0, 0);">
@@ -101,5 +105,24 @@
         </li>
         <li class="item3"> <a href="f774b78497b7b4223516f043786dca20.jpg"> epic</a></li>
     </ul>
+
+    <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+          Dropdown button
+        </button>
+        <ul class="dropdown-menu">
+             <li><a class="dropdown-item" href="#"><a href= "https://www.playstation.com/en-us/games/minecraft/"> MC </a></li>
+             <li><a class="dropdown-item" href="#"><a href= "https://www.roblox.com"> Roblox </a></li>
+             <li><a class="dropdown-item" href="#"><a href= "https://www.tiktok.com/@jtgta/video/7293958006658616608"> Elijah Jameson</a></li>
+        </ul>
+      </div>
+
+
+      <div>
+        <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
+        <div id="demo" class="collapse">
+          dont mine at night
+      </div>
+
 
 </html>
