--- a/Website/CyberRent_home_page.html
+++ b/Website/CyberRent_home_page.html
@@ -30,5 +30,15 @@
             <div>
                 <img align="right" class="img1" src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Carrito_de_Compra.png" alt="Black Shopping Cart"></a>
             </div>
+            
+             </div>
+
+            <div class="pop-up">
+                <button type="button" class="btn btn-success btn-outline-dark" data-bs-toggle="collapse" data-bs-target="#demo">Need Help</button>
+             <div id="demo" class="collapse">
+                Would you like to contact an agent? <br>
+                If "Yes", call 000-000-0000.
+            </div> 
+           </div>
         </body>
         </html>
