--- a/Allannah Becton_portfolio.html
+++ b/Allannah Becton_portfolio.html
@@ -15,6 +15,30 @@
             <p style="color: blue;">Allannah is currently attending NJIT for her bachelor's in the 5 year Architecture program. <br> Before moving to New Jersey, she was attending high school in Ansbach, Germany on a military base.<br> Allannah is ecstatic about being able to experience a new situation that she knows she will learn from. <br> She is excited to express her feelings and ideas either on paper or digitally.</p>
         <a href="https://www.njit.edu/academics/major/architecture"> NJIT Architecture Website</a> <br>
         <img src="https://thumbs.dreamstime.com/b/architecture-plan-tools-12802962.jpg" alt="Architecture architecture-plan-tools-12802962" style="width: 550px;height: 400px;">
+        <script>
+            let num1=15
+            let num2=20
+            console.log(num1+num2)
+            console.log(num1-num2)
+            console.log(num1/num2)
+            console.log(num1*num2)
+
+            let score = 85
+            function calculateGrade(score){
+                if (score >=90) {
+                    console.log("Grade: A");
+                } else if (score >= 80 && score <=89) {
+                    console.log("Grade: B");
+                } else if (score >= 70 && score <=79) {
+                    console.log("Grade: C");
+                } else if (score >= 60 && score <=69) {
+                    console.log("Grade: D");
+                } else {
+                    console.log("Grade: F")
+                }
+            }
+            calculateGrade (score);
+        </script>
         </body>
         <div>
             <table class="table table-bordered table-striped" style="width: 25%;">
