--- a/Allannah Becton_portfolio.html
+++ b/Allannah Becton_portfolio.html
@@ -39,6 +39,19 @@
             }
             calculateGrade (score);
         </script>
+            <br>
+        <button id="changeTextBtn">Change Text</button>
+        <p id="displayText"Original Text></p>
+        <script>
+            var changeTextBtn = document.getElementById("changeTextBtn");
+            var displayText = document.getElementById("displayText");
+            changeTextBtn.addEventListener("click", function(){
+                changeText();
+            })
+            function changeText(){
+                displayText.textContent = "Hello, JavaScript World!";
+            }
+        </script>
         </body>
         <div>
             <table class="table table-bordered table-striped" style="width: 25%;">
