--- a/Allannah Becton_portfolio.html
+++ b/Allannah Becton_portfolio.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+        
         <body>
             <h1 style="text-align: center; background-color: rgb(123, 176, 255); color: azure;">Allannah Becton</h1>
             <h3 style="color: darkblue; background-color: rgba(226, 226, 226, 0.5);">
@@ -39,7 +40,7 @@
             }
             calculateGrade (score);
         </script>
-            <br>
+        <br>
         <button id="changeTextBtn">Change Text</button>
         <p id="displayText"Original Text></p>
         <script>
@@ -52,6 +53,7 @@
                 displayText.textContent = "Hello, JavaScript World!";
             }
         </script>
+        
         </body>
         <div>
             <table class="table table-bordered table-striped" style="width: 25%;">
@@ -144,4 +146,33 @@
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
      </div> 
    </div>
+   <body>
+
+    <form id="myForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required><br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required><br>
+
+        <input type="submit" value="Submit">
+    </form>
+
+    <script>
+        document.getElementById("myForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+
+            var username = document.getElementById("username").value;
+            var password = document.getElementById("password").value;
+
+            if (username === '' || password === '') {
+                alert("Please fill in both username and password.");
+            } else {
+                setTimeout(function() {
+                    alert("Submission successful after 3 seconds. Redirecting...");
+                }, 3000);
+            }
+        });
+    </script>
+</body>
 </html>
