--- a/Website/CyberRent_home_page.html
+++ b/Website/CyberRent_home_page.html
@@ -14,17 +14,17 @@
             <h1 class="title2">CyberRent</h1>
             <p class="para">CyberRent is the solution to a college student's problem! If <br>you don't have an item that is easy to get, then you can rent an item an an 
             <br>affordable rate! You can rent an item for a certain amount of time<br> and price if the rentee agrees! You have the ability to connect with <br>others, so you can easily rent the items that you need!</p>
-            <p class="para2"><a href="file:///C:/Users/allbe/Visual%20Studio%20Code/TermsandConditions.html#" class="btn btn-light btn-outline-dark">Learn More</a></p>
+            <p class="para2"><a href="Terms And Conditions.html" class="btn btn-light btn-outline-dark">Learn More</a></p>
 
             <!--This is the bar at the top of the page-->
             <div class="navbar navbar-expand-sm bg-dark fixed-top justify-content-center">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="file:///C:/Users/allbe/Visual%20Studio%20Code/CyberRent_home_page.html#sign%20uppage" class="nav-link text-light">Home</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/allbe/Downloads/sign%20up.html" class="nav-link text-light">Sign-Up</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/allbe/Downloads/Login.html" class="nav-link text-light">Login</a></li>
-                    <li class="nav-item"><a href="file:///C:/Users/allbe/Visual%20Studio%20Code/TermsandConditions.html#" class="nav-link text-light">Terms and Conditions Page</a></li>
+                    <li class="nav-item"><a href="CyberRent_home_page.html" class="nav-link text-light">Home</a></li>
+                    <li class="nav-item"><a href="Sign Up.html" class="nav-link text-light">Sign-Up</a></li>
+                    <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
+                    <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
                     <li class="nav-item"><a href="#rentitempage" class="nav-link text-light">Rent an Item</a></li>
-                    <li class="nav-item"><a href="#rentoutpage" class="nav-link text-light">Rent out an Item</a></li>
+                    <li class="nav-item"><a href="#rentoutpage" class="nav-link text-light">Publish an Item</a></li>
                 </ul>
             </div>
             <div>
