--- a/Website/sign up.html
+++ b/Website/sign up.html
@@ -7,6 +7,17 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div class="navbar navbar-expand-sm bg-dark fixed-top justify-content-center">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a href="CyberRent_home_page.html" class="nav-link text-light">Home</a></li>
+                <li class="nav-item"><a href="Sign Up.html" class="nav-link text-light">Sign-Up</a></li>
+                <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
+                <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
+                <li class="nav-item"><a href="#rentitempage" class="nav-link text-light">Rent an Item</a></li>
+                <li class="nav-item"><a href="#rentoutpage" class="nav-link text-light">Publish an Item</a></li>
+            </ul>
+        </div>
+        <br><br><br>
         <div class="signup">
             <h2>Sign Up</h2>
         <form>
@@ -34,6 +45,7 @@
                 <label for="password"> Password:</label>
                 <input type="password" class="form-control" id="psw" placeholder="Enter Password" name="Password">
             </div>
+            <br>
             <div>
                 <button type="submit" class="btn btn-primary">Create Account</button>
             </div>
