--- a/Website/Login.html
+++ b/Website/Login.html
@@ -14,7 +14,7 @@
                 <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
                 <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
                 <li class="nav-item"><a href="#rentitempage" class="nav-link text-light">Rent an Item</a></li>
-                <li class="nav-item"><a href="#rentoutpage" class="nav-link text-light">Publish an Item</a></li>
+                <li class="nav-item"><a href="Publish an Item.html" class="nav-link text-light">Publish an Item</a></li>
             </ul>
         </div> 
         <br>
