--- a/Website/Sign Up.html
+++ b/Website/Sign Up.html
@@ -13,7 +13,7 @@
                 <li class="nav-item"><a href="Sign Up.html" class="nav-link text-light">Sign-Up</a></li>
                 <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
                 <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
-                <li class="nav-item"><a href="#rentitempage" class="nav-link text-light">Rent an Item</a></li>
+                <li class="nav-item"><a href="Items for Rent.html" class="nav-link text-light">Rent an Item</a></li>
                 <li class="nav-item"><a href="Publish an Item.html" class="nav-link text-light">Publish an Item</a></li>
             </ul>
         </div>
@@ -22,28 +22,28 @@
             <h2>Sign Up</h2>
         <form>
             <div class="First">
-                <label for="First Name"> First Name:</label>
-                <input type="text" class="form-control" id="First" placeholder="Enter First Name" name="First Name">
+                <label for="first_name"> First Name:</label>
+                <input type="text" class="form-control" id="first_name" placeholder="Enter First Name" name="first_name" autocomplete="given-name">
             </div>
             <div class="Last">
-                <label for="Last Name"> Last Name:</label>
-                <input type="text" class="form-control" id="Last" placeholder="Enter Last Name" name="Last Name">
+                <label for="last_name"> Last Name:</label>
+                <input type="text" class="form-control" id="last_name" placeholder="Enter Last Name" name="last_name" autocomplete="family-name">
             </div>
             <div class="email"> 
                 <label for="email"> Email:</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" autocomplete="email">
             </div>
             <div class="Phone">
-                <label for="Phone Number"> Phone Number:</label>
-                <input type="text" class="form-control" id="Phone" placeholder="Enter Phone Number" name="Phone Number">
+                <label for="phone_number"> Phone Number:</label>
+                <input type="text" class="form-control" id="phone_number" placeholder="Enter Phone Number" name="phone_number" autocomplete="tel">
             </div>
             <div class="Username">
-                <label for="Username"> Username:</label>
-                <input type="text" class="form-control" id="username" placeholder="Enter Username" name="Username">
+                <label for="username"> Username:</label>
+                <input type="text" class="form-control" id="username" placeholder="Enter Username" name="Username" autocomplete="username">
             </div>
             <div class="password">
                 <label for="password"> Password:</label>
-                <input type="password" class="form-control" id="psw" placeholder="Enter Password" name="Password">
+                <input type="password" class="form-control" id="password" placeholder="Enter Password" name="password" autocomplete="new-password">
             </div>
             <br>
             <div>
