--- a/Website/Terms And Conditions.html
+++ b/Website/Terms And Conditions.html
@@ -12,7 +12,7 @@
         <li class="nav-item"><a href="Sign Up.html" class="nav-link text-light">Sign-Up</a></li>
         <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
         <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
-        <li class="nav-item"><a href="#rentitempage" class="nav-link text-light">Rent an Item</a></li>
+        <li class="nav-item"><a href="Items for Rent.html" class="nav-link text-light">Rent an Item</a></li>
         <li class="nav-item"><a href="Publish an Item.html" class="nav-link text-light">Publish an Item</a></li>
     </ul>
 </div>
