--- a/Website/CyberRent_home_page.html
+++ b/Website/CyberRent_home_page.html
@@ -23,12 +23,12 @@
                     <li class="nav-item"><a href="Sign Up.html" class="nav-link text-light">Sign-Up</a></li>
                     <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
                     <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
-                    <li class="nav-item"><a href="#rentitempage" class="nav-link text-light">Rent an Item</a></li>
+                    <li class="nav-item"><a href="Items for Rent.html" class="nav-link text-light">Rent an Item</a></li>
                     <li class="nav-item"><a href="Publish an Item.html" class="nav-link text-light">Publish an Item</a></li>
                 </ul>
             </div>
             <div>
-                <img align="right" class="img1" src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Carrito_de_Compra.png" alt="Black Shopping Cart"></a>
+                <img align="right" class="img-1" src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Carrito_de_Compra.png" alt="Black Shopping Cart"></a>
             </div>
             
              </div>
