--- a/Website/Items for Rent.html
+++ b/Website/Items for Rent.html
@@ -1,208 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="cyberrent style css">
-<style>
-body {
-background-color: lightgray
-}
-
-p {
-    font-size: 18px;
-}
-
-p1 {
-    font-size: 12px;
-}
-
-.Ladder:hover{
-    background-color: red;
-    border: 2px solid black;
-}
-
-.hammer:hover{
-    background-color: red;
-    border: 2px solid black;
-}
-
-.iPhone:hover{
-    background-color: red;
-    border: 2px solid black;
-}
-
-.camera:hover{
-    background-color: red;
-    border: 2px solid black;
-}
-
-.airmattress:hover{
-    background-color: red;
-    border: 2px solid black;
-}
-
-.reclinablechair:hover{
-    background-color: red;
-    border: 2px solid black;
-}
-
-.snowconemachine:hover{
-    background-color: red;
-    border: 2px solid black;
-}
-
-
-.vacuumcleaner:hover{
-    background-color: red;
-    border: 2px solid black;
-}
-
-
-
-div3 {
-    border: 1px solid black;
-    background-color: lightyellow;
-    padding: 4px;
-}
-
-div4 {
-    border: 1px solid black;
-    background-color: lightyellow;
-    padding: 4px;
-}
-
-div5 {
-    border: 1px solid black;
-    background-color: lightyellow;
-    padding: 4px;
-}
-
-
-div6 {
-    border: 1px solid black;
-    background-color: lightyellow;
-    padding: 4px;
-
-}
-
-div7 {
-    border: 1px solid black;
-    background-color: lightyellow;
-    padding: 4px;
-
-}
-
-div8 {
-    border: 1px solid black;
-    background-color: lightyellow;
-    padding: 4px;
-
-}
-
-div9 {
-    border: 1px solid black;
-    background-color: lightyellow;
-    padding: 4px;
-
-}
-
-div10 {
-    border: 1px solid black;
-    background-color: lightyellow;
-    padding: 4px;
-
-}
-
-
-.img1{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black; 
-    padding: 5px 5px 5px 5px;
-    height:  100%;
-    width: 20%;
-}
-
-.img2{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black; 
-    padding: 5px 5px 5px 5px;
-    height:  100%;
-    width: 20%;
-}
-
-.img3{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black; 
-    padding: 5px 5px 5px 5px;
-    height:  100%;
-    width: 20%;
-}
-
-
-.img4{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black; 
-    padding: 5px 5px 5px 5px;
-    height:  100%;
-    width: 20%;
-}
-
-.img5{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black; 
-    padding: 5px 5px 5px 5px;
-    height:  100%;
-    width: 20%;
-}
-
-.img6{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black; 
-    padding: 5px 5px 5px 5px;
-    height:  100%;
-    width: 20%;
-}
-
-.img7{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black; 
-    padding: 5px 5px 5px 5px;
-    height:  100%;
-    width: 20%;
-}
-
-
-.img8{
-    width: 200px;
-    height: 200px;
-    border: 1px solid black; 
-    padding: 5px 5px 5px 5px;
-    height:  100%;
-    width: 20%;
-}
-
-
-.italic {
-    font-style: italic;
-}
-
-
-.p1 {
-    font-family: "sans-serif;"
-}
-
-</style>
+<link rel="stylesheet" href="website_styles.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </head>
 <body>
+<div class="navbar navbar-expand-sm bg-dark fixed-top justify-content-center">
+    <ul class="navbar-nav">
+        <li class="nav-item"><a href="CyberRent_home_page.html" class="nav-link text-light">Home</a></li>
+        <li class="nav-item"><a href="Sign Up.html" class="nav-link text-light">Sign-Up</a></li>
+        <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
+        <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
+        <li class="nav-item"><a href="Items for Rent.html" class="nav-link text-light">Rent an Item</a></li>
+        <li class="nav-item"><a href="Publish an Item.html" class="nav-link text-light">Publish an Item</a></li>
+    </ul>
+</div>
+<br><br><br><br><br>
+<h2 style= "font-size:30px; font-family: 'Times New Roman', Times, serif;"> Tools <a style="font-size:15px;" class="seeall" href="https://www.google.com/"> See All</a></h2> 
 
-<h1 style="color: green; text-align:center; font-size:50px; font-family: Arial;">Rent Anything!</h1>
-<h2 style= "font-size:30px; font-family: Arial;"> Tools <a style="font-size:15px;" class="seeall" href="https://www.google.com/"> See All</a></h2> 
+
 <div>
     <img class="img1" src="https://www.smsarayli.com.tr/upload/6-basamakli-aluminyum-mega-cift-tarafli-merdiven-876-i.jpg" alt="ladder"
     width="190" height="200" >
@@ -227,7 +44,7 @@ width="200" height="200">
 </ul>
 <p1> No Reviews</p1>
 
-<h2 style= "font-size:30px; font-family: Arial;">Electronics <a style="font-size:15px;" class="seeall" href="https://www.google.com/"> See All</a> </h2>
+<h2 style= "font-size:30px; font-family: 'Times New Roman', Times, serif;">Electronics <a style="font-size:15px;" class="seeall" href="https://www.google.com/"> See All</a> </h2>
 <div>
      <img class="img3" src="https://images.offerup.com/g1im9UFmokdBTdV7hhpRpq1OBNs=/1030x1418/cfa2/cfa28bc1182e43e986ed7ee03614d0d7.jpg" alt="iPhone 12-128GB UNLOCKED"
      width="150" height="200" >
@@ -253,7 +70,7 @@ width="200" height="200">
 <p1> 1 Review </p1>
 
 
-<h2 style= "font-size:30px; font-family: Arial;">Home Goods <a style="font-size:15px;" class="seeall" href="https://www.google.com/"> See All</a></h2>
+<h2 style= "font-size:30px; font-family: 'Times New Roman', Times, serif;">Home Goods <a style="font-size:15px;" class="seeall" href="https://www.google.com/"> See All</a></h2>
 <div>
     <img class="img5" src="https://i.ebayimg.com/images/g/SOIAAOSwEFFi~Srh/s-l1200.webp" alt="air mattress"
     width="150" height="200" >
@@ -280,7 +97,7 @@ width="200" height="200">
 <ul>
 </ul>
 
-<h2 style= "font-size:30px; font-family: Arial;">Applicances <a style="font-size:15px;" class="seeall" href="https://www.google.com/"> See All</a></h2>
+<h2 style= "font-size:30px; font-family: 'Times New Roman', Times, serif;">Applicances <a style="font-size:15px;" class="seeall" href="https://www.google.com/"> See All</a></h2>
 <div>
     <img class="img7" src="https://cdnimg.webstaurantstore.com/images/products/large/120611/2222359.jpg" alt="snow cone machine"
     width="150" height="200" >
@@ -306,8 +123,5 @@ width="200" height="200">
 <p1> 3 Reviews </p1>
 <ul>
 </ul>
-
-
-
 </body>
 </html>
