--- a/Website/Login.html
+++ b/Website/Login.html
@@ -13,7 +13,7 @@
                 <li class="nav-item"><a href="Sign Up.html" class="nav-link text-light">Sign-Up</a></li>
                 <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
                 <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
-                <li class="nav-item"><a href="#rentitempage" class="nav-link text-light">Rent an Item</a></li>
+                <li class="nav-item"><a href="Items for Rent.html" class="nav-link text-light">Rent an Item</a></li>
                 <li class="nav-item"><a href="Publish an Item.html" class="nav-link text-light">Publish an Item</a></li>
             </ul>
         </div> 
@@ -25,7 +25,7 @@
         <form>
           <div>
             <label for="email">Email or Username:</label>
-            <input type="email" class="form-control" id="email" placeholder="Enter email or Username" name="email">
+            <input type="email" class="form-control" id="email" placeholder="Enter email or Username" name="email" autocomplete="email">
           </div>
           <div>
             <label for="pwd">Password:</label>
@@ -36,7 +36,7 @@
               <input class="form-check-input" type="checkbox" name="remember"> Remember me
             </label>
             <div>
-              <a class="newacc" href="sign up.html">Create New Account</a></li>
+              <a class="newacc" href="sign up.html">Create New Account</a>
             </div>
             <br>
           </div>
