--- a/Website/Publish an Item.html
+++ b/Website/Publish an Item.html
@@ -17,7 +17,7 @@
                 <li class="nav-item"><a href="Sign Up.html" class="nav-link text-light">Sign-Up</a></li>
                 <li class="nav-item"><a href="Login.html" class="nav-link text-light">Login</a></li>
                 <li class="nav-item"><a href="Terms And Conditions.html" class="nav-link text-light">Terms and Conditions Page</a></li>
-                <li class="nav-item"><a href="#rentitempage" class="nav-link text-light">Rent an Item</a></li>
+                <li class="nav-item"><a href="Items for Rent.html" class="nav-link text-light">Rent an Item</a></li>
                 <li class="nav-item"><a href="Publish an Item.html" class="nav-link text-light">Publish an Item</a></li>
             </ul>
         </div>
@@ -82,7 +82,7 @@
    <div class="form-section">
     <h3>Contact Information</h3>
        <label for="email">Email:</label>
-       <input type="email" id="email" name="email" required>
+       <input type="email" id="email" name="email" required autocomplete="email">
        <div class="checkbox-container">
         <label for="includePhone">Include Phone Number:</label>
         <input type="checkbox" id="includePhone" name="includePhone" onchange="togglePhoneInput()">
